# Encyptor

./: CMakeLists.txt  README.md  Readme.md  cli.h  encryption.h  main  main.cpp  test_image.jpg.enc  unnecessary_directory.h  zip.h
cmd/: cli.h
internal/: directory.h  encryption.h  zip.h
